# dmtty

./: CMakeLists.txt  README.md  dmtty.dmr  manifest.dmm
.github/workflows/: ci.yml  release.yml
configs/: README.md  dmtty.ini
docs/: README.md  api-reference.md  configuration.md  dmtty.md
examples/: config.ini
include/: dmtty.h  dmtty_types.h
src/: dmtty.c
tools/console/: CMakeLists.txt  README.md  console.dmr  main.c
tools/console/configs/: console.rules  console@.ini
tools/tty/: CMakeLists.txt  README.md  main.c  tty.dmr
